--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,14 +1,14 @@
 ---
-title: "Welcome to Rememblog"
+title: "Welcome to A gentle intro to Package Management in R"
 description: |
-  Welcome to our new blog, Rememblog. We hope you enjoy 
+  Welcome to our new blog, A gentle intro to Package Management in R. We hope you enjoy 
   reading what we have to say!
 author:
   - name: Nora Jones 
     url: https://example.com/norajones
     affiliation: Spacely Sprockets
     affiliation_url: https://example.com/spacelysprokets
-date: 11-22-2021
+date: 11-23-2021
 output:
   distill::distill_article:
     self_contained: false
