--- a/_posts/2021-11-23-a-gentle-intro-to-package-management-in-r/a-gentle-intro-to-package-management-in-r.Rmd
+++ b/_posts/2021-11-23-a-gentle-intro-to-package-management-in-r/a-gentle-intro-to-package-management-in-r.Rmd
@@ -8,6 +8,8 @@ preview: images/libraries.jpg
 output:
   distill::distill_article:
     self_contained: false
+    toc: true
+    toc_depth: 4
 ---
 
 # Installing your first R package
